cvers/cverision1/errors.txt
In file included from main.h:15:0,
                 from Sequencer.cpp:1:
/usr/local/include/wiringPi.h:188:38: error: conflicting declaration of ‘int wiringPiSetupGpio()’ with ‘C’ linkage
 extern int  wiringPiSetupGpio   (void) ;
                                      ^
In file included from main.h:12:0,
                 from Sequencer.cpp:1:
midime.h:6:5: note: previous declaration with ‘C++’ linkage
 int wiringPiSetupGpio(void);
     ^
main.h: In function ‘void changeScale(int, int)’:
main.h:704:49: error: request for member ‘size’ in ‘Scale’, which is of non-class type ‘int [8]’
        currentScale = (currentScale+val)%(Scale.size());
                                                 ^
main.h:761:14: error: ‘camera’ was not declared in this scope
    if(camera()[0]==1)
              ^
main.h: In function ‘void opperate(int)’:
main.h:815:44: error: ‘camera’ was not declared in this scope
   xmod().find(cursorxyz[0])->second(camera()[1]);
                                            ^
main.h:817:44: error: ‘camera’ was not declared in this scope
   ymod().find(cursorxyz[1])->second(camera()[2]);
                                            ^
main.h:819:44: error: ‘camera’ was not declared in this scope
   zmod().find(cursorxyz[2])->second(camera()[3]);
